fix: update footer styling for improved alignment and interaction

--- a/css/style.css
+++ b/css/style.css
@@ -365,10 +365,11 @@ footer {
     border-radius: 10px;
     font-size: 16px;
     padding: 12px 24px;
-    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     text-align: center;
+    align-items: center;
+    text-decoration: none;
 }
 
 
@@ -387,6 +388,7 @@ footer {
     opacity: 0;
     transition: opacity .3s ease-in-out;
     border-radius: 10px;
+    pointer-events: none;
 }
 
 .contact-btn:active {
@@ -411,6 +413,7 @@ footer {
     left: 0;
     top: 0;
     border-radius: 10px;
+    pointer-events: none;
 }
 
 @keyframes glowing {
